[package]
name = "rookre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = { version = "0.12.0", features = ["audio"] }
fastrand = "2.0.1"
slotmap = "1.0.7"
serde = "1.0.196"
serde_yaml = "0.9.31"
once_cell = "1.19.0"
